add linux driver

--- a/1_scull_fifo/Makefile
+++ b/1_scull_fifo/Makefile
@@ -3,6 +3,7 @@ CUR_DIR = $(shell pwd)
 K_DIR = /lib/modules/$(KVERS)/build
 
 obj-m += global_fifo.o
+obj-m += global_fifo_poll.o
 
 build: kernel_modules
 
